lab1/k8s/clinicservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-service
  template:
    metadata:
      labels:
        app: news-service
    spec:
      containers:
        - image: daryna04/news-service:01
          name: news-service
          ports:
            - containerPort: 8080
