lab1/k8s/clinicservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/animals
            pathType: "Prefix"
            backend:
              service:
                name: news-service
                port:
                  number: 80
